# docs/openApi.yaml
@@ -88,7 +88,7 @@ paths:
                                             example: true
                                         message:
                                             example: "User updated successfully"
-    /api/auth/register:
+    /api/noauth/register:
         post:
             summary: "Register an user account"
             tags:
@@ -208,11 +208,11 @@ paths:
                                     - properties:
                                         message:
                                             example: "An error occurred while processing the request"
-    /api/schools:
+    /api/noauth/schools:
         get:
             summary: Retrieve a list of schools.
-            security:
-                - apiKeyAuth: []
+            # security:
+            #     - apiKeyAuth: []
             description: "This endpoint can only be accessed by users with the 'admin', 'moderator', and 'user' role."
             tags:
                 - Schools
@@ -272,6 +272,7 @@ paths:
                                     - properties:
                                         message:
                                             example: "Unauthorized"
+    /api/schools:
         post:
             summary: Add a new school to the platform.
             security:
@@ -497,11 +498,11 @@ paths:
                                     - properties:
                                         message:
                                             example: "Internal server error occurred"
-    /api/reviews:
+    /api/noauth/reviews:
         get:
             summary: Get all reviews
-            security:
-                - apiKeyAuth: []
+            # security:
+            #     - apiKeyAuth: []
             tags:
                 - Reviews
             responses:
@@ -600,6 +601,51 @@ paths:
                                                 userid:
                                                     type: string
                                         -   $ref: "#/components/schemas/Review"             
+        get:
+            summary: Get reviews based on school ID
+            security:
+                - apiKeyAuth: []
+            tags:
+            - Schools
+            parameters:
+            -   in: path
+                name: schoolId
+                required: true
+                schema:
+                    type: string
+                    description: ID of the school
+            responses:
+                '200':
+                    description: Successfully retrieved reviews.
+                    content:
+                        application/json:
+                            schema:
+                                allOf:
+                                    - $ref: "#/components/schemas/ApiResponse"
+                                    - properties:
+                                        success:
+                                            example: true
+                                        message:
+                                            type: string
+                                            example: Successfully retrieved reviews.
+                                    - type: object
+                                    - properties:
+                                        data:
+                                            type: array
+                                            items:
+                                                allOf:
+                                                    - properties:
+                                                        id:
+                                                            type: string
+                                                        schoold:
+                                                            type: string
+                                                        userId:
+                                                            type: string
+                                                    - $ref: "#/components/schemas/Review"
+                                                    - properties:
+                                                        status:
+                                                            type: string
+                                                            example: pending
                 '400':
                     description: Invalid request
                     content:
@@ -637,7 +683,7 @@ paths:
                                         type: string
                                         example: School not found.
     /api/reviews/{reviewId}/approve:
-        put:
+        patch:
             summary: Approve a pending review
             security:
                 - apiKeyAuth: []
@@ -651,8 +697,12 @@ paths:
                         type: string
                     description: ID of the review to approve
             responses:
-                '204':
+                '200':
                     description: Review approved successfully
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ApiResponse"
                 '401':
                     description: Unauthorized
                     content:
@@ -667,7 +717,7 @@ paths:
                                 $ref: "#/components/schemas/ApiResponse"
 
     /api/reviews/{reviewId}/reject:
-        put:
+        patch:
             summary: Reject a pending review
             security:
                 - apiKeyAuth: []
@@ -681,8 +731,12 @@ paths:
                         type: string
                     description: ID of the review to reject
             responses:
-                '204':
+                '200':
                     description: Review rejected successfully
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ApiResponse"
                 '401':
                     description: Unauthorized
                     content:
@@ -727,7 +781,20 @@ components:
                 - properties:
                     id:
                         type: string
-                - $ref: "#/components/schemas/RegisterUser"
+                    username:
+                        type: string
+                        example: andra
+                    password:
+                        type: string
+                        example: andra123
+                        description: A string with at least one letter and one number
+                    role:
+                        type: string
+                        enum:
+                            - admin
+                            - moderator
+                            - user
+                        example: admin
         ApiResponse:
             type: object
             properties:
@@ -748,6 +815,8 @@ components:
                 description:
                     type: string
                     example: Universitas jaket kuning
+                imageUrl:
+                    type: string
         Review:
             type: object
             properties:
