# src/controllers/reviewController.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from "express";
-import { getAllReviews, addReview } from "../services/review";
+import { getAllReviews, addReview, getReviewbySchoolId, getReviewById, updatetReviewById } from "../services/review";
 import { getSchoolById } from "../services/school";
 import { Db } from "mongodb";
 import { loggerTimestamp } from "../utils/utils";
@@ -9,6 +9,25 @@ import { secretKey } from "../configs/envInit";
 export async function getReviewsController(req: Request, res: Response) {
     try {
         const reviews = await getAllReviews(req.db as Db); // You'll need to implement the `getAllReviews` function.
+        loggerTimestamp("Reviews fetched successfully");
+        res.status(200).json({
+            success: true,
+            message: "Reviews fetched successfully",
+            data: reviews,
+        });
+    } catch (error) {
+        loggerTimestamp("An error occurred while fetching Reviews: " + error);
+        res.status(500).json({
+            success: false,
+            message: "An error occurred while fetching Reviews",
+        });
+    }
+}
+
+export async function getReviewsBySchoolController(req: Request, res: Response) {
+    try {
+        const schoolId = req.params.schoolId
+        const reviews = await getReviewbySchoolId(schoolId, req.db as Db); // You'll need to implement the `getAllReviews` function.
         loggerTimestamp("Reviews fetched successfully");
         res.status(200).json({
             success: true,
@@ -60,7 +79,6 @@ export async function addReviewController(req: Request, res: Response) {
         await addReview(newReview, req.db as Db);
 
         loggerTimestamp("Review added successfully");
-        console.log(newReview)
         res.status(201).json({
             success: true,
             message: "Review added successfully",
@@ -83,4 +101,84 @@ export async function addReviewController(req: Request, res: Response) {
             message: "An error occurred while adding review",
         });
     }
+}
+
+export async function approveReviewController(req: Request, res: Response) {
+	try {
+		const reviewId = req.params.reviewId;
+        const status = "approved" 
+        
+		const reviewExist = await getReviewById(reviewId, req.db as Db);
+
+		if (!reviewExist) {
+			loggerTimestamp("Approving review status failed: review doesnt exist");
+			return res.status(404).json({
+				success: false,
+				message: "Review doesnt exist",
+			});
+		}
+
+		const updateField: any = {};
+		if (status) {
+			updateField.status = status
+		}
+		
+
+		await updatetReviewById(reviewId, updateField, req.db as Db);
+		
+
+		res.status(200).json({
+			succes: true,
+			message: "Succesfully approving the review",
+		});
+
+
+
+	} catch (error) {
+		loggerTimestamp("An error occurred during updating school: " + error);
+		res.status(500).json({
+			success: false,
+			message: "An error occurred during approving the review",
+		});
+	}
+}
+
+export async function rejectReviewController(req: Request, res: Response) {
+	try {
+		const reviewId = req.params.reviewId;
+        const status = "rejected"
+        
+		const reviewExist = await getReviewById(reviewId, req.db as Db);
+
+		if (!reviewExist) {
+			loggerTimestamp("Rejecting review status failed: review doesnt exist");
+			return res.status(404).json({
+				success: false,
+				message: "Review doesnt exist",
+			});
+		}
+
+		const updateField: any = {};
+		if (status) {
+			updateField.status = status
+		}
+		
+
+		await updatetReviewById(reviewId, updateField, req.db as Db);
+		
+
+		res.status(200).json({
+			succes: true,
+			message: "Succesfully rejecting a review",
+		});
+
+
+
+	} catch (error) {
+		loggerTimestamp("An error occurred during rejecting a review " + error);
+		res.status(500).json({
+			success: false,
+			message: "An error occurred during rejecting a review",
+		});
+	}
 }
